# Afterlight

./: Style Guide
assets/graphics/data/: Testmap1.json
assets/graphics/tilesets/: lvl3_tileset_1.2.json
assets/maps/: lvl_3_hallway_1  lvl_3_hallway_2.json  lvl_3_screen_1.json  lvl_3_screen_2.json
cmake/: raylib.cmake
src/: CMakeLists.txt  Vectors.h  config.h.in  main.cpp
src/Game/: base_class.cpp  base_class.h  player_class.cpp  warrior.cpp  warrior.h
src/core/: Actor.cpp  Actor.h  Animations.cpp  Animations.h  CMakeLists.txt  Cam.cpp  Cam.h  CollisionManager.cpp  CollisionManager.h  DeltaTimeMachine.cpp  DeltaTimeMachine.h  EnemySpawner.cpp  EnemySpawner.h  Game.cpp  Game.h  Object_Manager.cpp  Object_Manager.h  Playerinput.cpp  Playerinput.h  Quadtree.cpp  Quadtree.h  Renderer.cpp  Renderer.h  Spawnpoints.h  Sprite.cpp  Sprite.h  SpriteAnimated.cpp  Sprite_animated.cpp  Sprite_animated.h  Stage.cpp  Stage.h  Store.h  Texture2d.cpp  Texture2d.h  Walls.cpp  Walls.h  colission_check.cpp  collision_check.cpp  collision_check.h  colllision_check.cpp  (+15 more)
src/game/: Collidable.h  Consumables.cpp  Consumables.h  EnemyBaseClass.cpp  EnemyBaseClass.h  EnemyClass1.cpp  EnemyClass1.h  EnemySpawner.cpp  EnemySpawner.h  Enemy_Base_Class.cpp  Enemy_Base_Class.h  Objects.cpp  Objects.h  PlayerBaseClass.cpp  PlayerBaseClass.h  PlayerClass1.cpp  PlayerClass1.h  PlayerClassOne.cpp  PlayerClassOne.h  Player_Base_Class.cpp  Player_Base_Class.h  Player_Class_1.cpp  Spawnpoints.cpp  Spawnpoints.h  Walls.cpp  Walls.h  player_class.cpp  player_class.h
src/scenes/: CMakeLists.txt  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  PauseScene.cpp  PauseScene.h  Scene.h  Screen.cpp  Screen.h  game_scene.cpp  menu_scene.cpp  menu_scene.h  pause_scene.cpp  screen.cpp  screen.h
